# iir

./: .dockerignore  .env.secret.tmpl  .env.tmpl  .gitignore  AGENTS.md  Dockerfile  Dockerfile.mysql  Dockerfile.postgresql  Dockerfile_old  Pipfile  README.md  manage.py  pyproject.toml  requirements.txt
dictionary/: admin.py  models.py  tests.py  views.py
dictionary/services/: __init__.py  replacement.py  replacement_internal.py
dictionary/templates/dictionary/: home.html  replace.html
docs/: api.md  container-deploy.md  container-mode.md  initial-admin.md  maintenance.md  mcp.md  operations.md  quickstart-docker.md  quickstart.md
iir/: cli.py
mcp/migrations/: __init__.py
svr/: settings.py  urls.py
tools/: iir_mcp_wrapper.py
