[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iir"
version = "0.1.7"
description = "Internal Info Replacement CLI"
requires-python = ">=3.12"
dependencies = [
  "Django==6.0",
  "djangorestframework==3.16.1",
  "uvicorn>=0.30",
  "whitenoise>=6.0",
]

[project.optional-dependencies]
postgres = ["psycopg2>=2.9"]
mysql = ["mysqlclient>=2.2"]

[project.scripts]
iir = "iir.cli:main"

[tool.setuptools]
packages = ["iir"]
