[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iir-tool"
version = "0.1.8"
description = "Internal Info Replacement CLI"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
dependencies = [
  "Django==6.0",
  "djangorestframework==3.16.1",
  "uvicorn>=0.30",
  "whitenoise>=6.0",
]


[project.optional-dependencies]
postgres = ["psycopg2>=2.9"]
mysql = ["mysqlclient>=2.2"]

[project.scripts]
iir = "iir.cli:main"

[tool.setuptools]
packages = ["iir"]
